# aocaml2023

./: README.md  aocaml2023.opam  dune-project  solution
inputs/: day05_dev_fertilizer_to_water.txt  day05_dev_humidity_to_location.txt  day05_dev_light_to_temperature.txt  day05_dev_seeds.txt  day05_dev_soil_to_fertilizer.txt  day05_dev_temperature_to_humidity.txt  day05_dev_water_to_light.txt  day05_fertilizer_to_water.txt  day05_humidity_to_location.txt  day05_light_to_temperature.txt  day05_water_to_light.txt  day06.txt  day10_processed.txt
lib/day01/: day01.ml  day01.mli  dune
lib/day02/: dune  game.ml  game.mli  hand.ml
lib/day03/: day03.ml  day03.mli  dune
lib/day04/: day04.ml  dune
lib/day05/: day05.ml  dune
lib/day06/: day06.ml  dune
lib/day07/: day07.ml  dune
lib/day09/: day09.ml  dune
lib/day10/: day10.ml  dune
lib/day11/: day11.ml  dune
lib/day12/: dune
lib/day13/: day13.ml  dune
lib/day14/: day14.ml  dune
test/: aocaml2023.ml  dune
