(lang dune 3.11)

(name aocaml2023)

(generate_opam_files true)

(source
 (github pjlast/aocaml2023))

(authors "Petri-Johan Last")

(maintainers "Petri-Johan Last")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aocaml2023)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune base)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
